tests/ui/repr/invalid-repr-on-structs-74082.stderr
error: the `repr(i128)` attribute cannot be used on structs
  --> $DIR/invalid-repr-on-structs-74082.rs:4:3
   |
LL | #[repr(i128)]
   |   ^^^^^^^^^^
   |
   = help: the `repr(i128)` attribute can only be applied to enums

error: the `repr(u128)` attribute cannot be used on structs
  --> $DIR/invalid-repr-on-structs-74082.rs:7:3
   |
LL | #[repr(u128)]
   |   ^^^^^^^^^^
   |
   = help: the `repr(u128)` attribute can only be applied to enums

error: aborting due to 2 previous errors

